  17 Oct 2019;  <chymera@gentoo.org> ants-9999.ebuild:
  sci-biology/ants: patch merged by ANTs upstream

  13 Oct 2019;  <chymera@gentoo.org> +files/ants-2.3.1_p20191013-logic.patch,
  +files/ants-2.3.1_p20191013-paths.patch, ants-2.3.1_p20191013.ebuild,
  ants-9999.ebuild:
  sci-biology/ants: updated ebuild style

  23 Sep 2019;  <chymera@gentoo.org> ants-2.3.1_p20190704.ebuild:
  sci-biology/ants: improved testing support

*ants-2.3.1_p20190704 (21 Sep 2019)

  21 Sep 2019;  <chymera@gentoo.org> +ants-2.3.1_p20190704.ebuild,
  -ants-2.3.1-r1.ebuild, -ants-2.3.1.ebuild, ants-9999.ebuild:
  sci-biology/ants: version bump 2.3.1_p20190704

*ants-2.3.1 (18 May 2019)

  18 May 2019;  <chymera@gentoo.org> +ants-2.3.1.ebuild:
  sci-biology/ants: unsandboxed fix fro bundling  Do not include in Gentoo
  Science, work on unbundled revbump

*ants-2.3.1-r1 (25 Mar 2019)
*ants-9999 (25 Mar 2019)

  25 Mar 2019;  <chymera@gentoo.org> +ants-2.3.1-r1.ebuild, +ants-9999.ebuild,
  +files/99ants, +metadata.xml:
  sci-biology/ants: fixes ahead of Gentoo Science