@@ -1,3 +1,7 @@
+  25 Nov 2019;  <chymera@gentoo.org> -ants-2.3.1_p20191013.ebuild:
+  sci-biology/ants: migrated version bump to Gentoo Scinece  https://gitweb.gent
+  oo.org/proj/sci.git/commit/?id=402183f38c721910fe038ed4ce04e0a98a37c584
+
   17 Oct 2019;  <chymera@gentoo.org> ants-9999.ebuild:
   sci-biology/ants: patch merged by ANTs upstream
 
